# python-package-exercise-project-3-team-15

./: Pipfile  README.md  pybirthdays.py  pyproject.toml
.github/workflows/: build.yaml
src/: pybirthdays.py
src/pybirthdayspackage/: __main__.py  pybirthdays.py
tests/: test_pybirthdays.py
